--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,19 @@
 .text {
   background-color: rgba(255,255,255,0.8);
 }
+
+.left{
+  float:left;
+}
+
+.right{
+  float:right;
+}
+.clear {
+  margin: 0px;
+}
+
+.smaller {
+ font-size: small; 
+ 
+}
